--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,23 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
+  <parent>
+    <groupId>ness.maven</groupId>
+    <artifactId>base</artifactId>
+    <version>0.9</version>
+  </parent>
+
+  <scm>
+    <connection>scm:git:ssh://git@github.com:NessComputing/sinatra-admin.git</connection>
+  </scm>
+
   <groupId>sinatra-admin</groupId>
   <artifactId>sinatra-admin</artifactId>
   <version>0.0</version>
+
+  <properties>
+    <dep.jetty.version>7.2.2.v20101205</dep.jetty.version>
+  </properties>
 
   <dependencies>
     <dependency>
@@ -14,6 +28,61 @@
       <artifactId>jruby-complete</artifactId>
       <version>1.6.5</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-server</artifactId>
+      <version>${dep.jetty.version}</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-jmx</artifactId>
+      <version>${dep.jetty.version}</version>
+      <scope>runtime</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.jruby.rack</groupId>
+      <artifactId>jruby-rack</artifactId>
+      <version>1.1.2</version>
+    </dependency>
+
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.jruby.plugins</groupId>
+        <artifactId>jruby-rake-plugin</artifactId>
+        <version>1.6.5</version>
+        <executions>
+          <execution>
+            <id>install-bundler</id>
+            <phase>process-resources</phase>
+            <goals>
+              <goal>jruby</goal>
+            </goals>
+            <configuration>
+              <args>-S gem install bundler --no-ri --no-rdoc --install-dir .gems</args>
+            </configuration>
+          </execution>
+          <execution>
+            <id>bundle-install</id>
+            <phase>process-resources</phase>
+            <goals>
+              <goal>jruby</goal>
+            </goals>
+            <configuration>
+              <args>
+                -e
+                ENV['GEM_HOME']=File.join(Dir.pwd,'.gems');ENV['GEM_PATH']=File.join(Dir.pwd,'.gems');ENV['BUNDLE_GEMFILE']=File.join(Dir.pwd,'Gemfile');require'rubygems';require'bundler';require'bundler/cli';cli=Bundler::CLI.new;cli.install
+              </args>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 
 </project>
