--- a/config.json
+++ b/config.json
@@ -5,10 +5,9 @@
         "name":  "Atlassian",
         "type": "menu",
         "items": [
-          {"path": "/jira", "name": "Jira", "type": "iframe", "url": "http://bugs.nessops.net", "methods": ["ALL"]}
-        , {"path": "/wiki", "name": "Confluence", "type": "iframe", "url": "http://wiki.nessops.net", "methods": ["ALL"]}
-        , {"path": "/jenkins", "name": "Jenkins", "type": "iframe", "url": "http://jenkins.nessops.net", "methods": ["ALL"]}
-        , {"path": "/crowd", "name": "Crowd", "type": "iframe", "url": "http://crowd.nessops.net/crowd", "methods": ["ALL"]}
+          {"path": "/jira", "name": "Jira (Bug Tracker)", "type": "iframe", "url": "http://bugs.nessops.net", "methods": ["ALL"]}
+        , {"path": "/wiki", "name": "Confluence (Wiki)", "type": "iframe", "url": "http://wiki.nessops.net", "methods": ["ALL"]}
+        , {"path": "/crowd", "name": "Crowd (Account Tool)", "type": "iframe", "url": "http://crowd.nessops.net/crowd", "methods": ["ALL"]}
         ]
       },
 
@@ -16,13 +15,19 @@
         "name": "Platform Tools",
         "type": "menu",
         "items": [
-            {"path": "/depot", "name": "Depot", "type": "iframe", "url": "https://depot.trumpet.io", "methods": ["ALL"]}
-          , {"path": "/account", "name": "Account Lookup", "type": "inline", "url": "http://web.tools.nessops.net/account.php", "methods": ["ALL"], "styles": ["http://web.tools.nessops.net/css/admin.css"], "routes": []}
+            {"path": "/account", "name": "Account Lookup", "type": "inline", "url": "http://web.tools.nessops.net/account.php", "methods": ["ALL"], "styles": ["http://web.tools.nessops.net/css/admin.css"], "routes": []}
+          , {"path": "/place", "name": "Place Lookup", "type": "inline", "url": "http://web.tools.nessops.net/place.php", "methods": ["ALL"], "styles": ["http://web.tools.nessops.net/css/admin.css"], "routes": []}
           , {"path": "/discovery", "name": "Discovery Status", "type": "inline", "url": "http://web.tools.nessops.net/discovery.php", "methods": ["ALL"], "styles": ["http://web.tools.nessops.net/css/admin.css"], "routes": []}
-          , {"path": "/source", "name": "Source Code", "type": "iframe", "url": "http://opengrok.tools.nessops.net:8080/source/", "methods": ["ALL"]}
+          , {"path": "/source", "name": "OpenGrok", "type": "iframe", "url": "http://opengrok.tools.nessops.net:8080/source/", "methods": ["ALL"]}
+          , {"path": "/jenkins", "name": "Jenkins", "type": "iframe", "url": "http://jenkins.nessops.net", "methods": ["ALL"]}
           , {"path": "/cobbler", "name": "Cobbler Provisioning", "type": "iframe", "url": "http://testing:testing@home.nessops.net/cobbler_web/", "methods": ["ALL"]}
-          , {"path": "/ganglia", "name": "Ganglia", "type": "iframe", "url": "http://ganglia.nessops.net/", "methods": ["ALL"]}
+          , {"path": "/ganglia", "name": "Ganglia", "type": "iframe", "url": "http://ganglia-sl.nessops.net/", "methods": ["ALL"]}
+          , {"path": "/icinga", "name": "Icinga", "type": "iframe", "url": "http://icinga.nessops.net/", "methods": ["ALL"]}
           , {"path": "/pmca", "name": "Memcache Admin", "type": "iframe", "url": "http://pmca.tools.nessops.net/", "methods": ["ALL"]}
+          , {"path": "/hg", "name": "Mercurial Browser", "type": "iframe", "url": "http://hg.nessops.net/", "methods": ["ALL"]}
+          , {"path": "/fisheye", "name": "Fisheye", "type": "iframe", "url": "http://fisheye.nessops.net/", "methods": ["ALL"]}
+          , {"path": "/debug-client", "name": "Debug Client", "type": "iframe", "url": "http://debug-client.nessops.net/", "methods": ["ALL"]}
+          , {"path": "/photo-tool", "name": "Photo Tool", "type": "iframe", "url": "http://photo-tool.nessops.net/", "methods": ["ALL"]}
         ]
       },
 
@@ -30,24 +35,54 @@
         "name": "ML Tools",
         "type": "menu",
         "items": [
-            {"path": "/search-view", "name": "(Prod) Simple Web-Based Place Search", "type": "iframe", "url": "http://db7-p.trumpet.io:8083/search-view", "methods": ["ALL"]}
-          , {"path": "/place-predicate", "name": "(Prod) Predicate Place Search", "type": "iframe", "url": "http://db7-p.trumpet.io:8083/place-predicate", "methods": ["ALL"]}
-          , {"path": "/search-log", "name": "(Prod) Query Log", "type": "iframe", "url": "http://db7-p.trumpet.io:8083/search-query-log", "methods": ["ALL"]}
-        ]
+            {"path": "/search-view", "name": "(Prod) Simple Web-Based Place Search", "type": "iframe", "url": "http://s0049.nessops.net:8090/search-view", "methods": ["ALL"]}
+          , {"path": "/place-predicate", "name": "(Prod) Predicate Place Search", "type": "iframe", "url": "http://s0049.nessops.net:8090/place-predicate", "methods": ["ALL"]}
+          , {"path": "/search-log", "name": "(Prod) Query Log", "type": "iframe", "url": "http://s0049.nessops.net:8090/search-query-log", "methods": ["ALL"]}
+          , {"path": "/place-analytics", "name": "Place Analytics", "type": "iframe", "url": "http://wiki.nessops.net/display/DEV/Place+Analytics", "methods": ["ALL"]}
+         ]
       },
 
+      {
+        "name": "iOS Tools",
+        "type": "menu",
+        "items": [
+            {"path": "/ios-client-builds", "name":"iOS Client Builds", "type": "iframe", "url": "http://devbuild.nesscomputing.com/all", "methods": ["GET"]}
+        ]
+      },
       {
         "name": "Hadoop",
         "type": "menu",
         "items": [
-            {"path": "/pri_namenode", "name": "Primary NameNode", "type": "iframe", "url": "http://s0036.nessops.net:50070/", "methods": ["ALL"]}
-          , {"path": "/sec_namenode", "name": "Secondary NameNode", "type": "iframe", "url": "http://s0036.nessops.net:50090/", "methods": ["ALL"]}
-          , {"path": "/tasktracker", "name": "TaskTracker", "type": "iframe", "url": "http://s0036.nessops.net:50030/", "methods": ["ALL"]}
-          , {"path": "/hbase_dev_master", "name": "HBase Prod Master", "type": "iframe", "url": "http://s0036.nessops.net:60010/", "methods": ["ALL"]}
-          , {"path": "/hbase_prod_master", "name": "HBase Dev Master", "type": "iframe", "url": "http://s0036.nessops.net:61010/", "methods": ["ALL"]}
-          , {"path": "/cloudera", "name": "Cloudera Manager", "type": "iframe", "url": "http://s0036.nessops.net:7180", "methods": ["ALL"]}
-          , {"path": "/hue", "name": "Hue", "type": "iframe", "url": "http://s0036.nessops.net:8088/", "methods": ["ALL"]}
-          , {"path": "/oozie", "name": "Oozie", "type": "iframe", "url": "http://s0036.nessops.net:11000/", "methods": ["ALL"]}
+            {"path": "/jobtracker", "name": "Job Tracker", "type": "iframe", "url": "http://hadoop0.nessops.net:50030/", "methods": ["ALL"]}
+          , {"path": "/hdfs", "name": "HDFS Browser", "type": "iframe", "url": "http://hadoop0.nessops.net:50070/nn_browsedfscontent.jsp", "methods": ["ALL"]}
+          , {"path": "/pri_namenode", "name": "Primary NameNode", "type": "iframe", "url": "http://hadoop0.nessops.net:50070/", "methods": ["ALL"]}
+          , {"path": "/sec_namenode", "name": "Secondary NameNode", "type": "iframe", "url": "http://prd-hadoop2.nessops.net:50090/", "methods": ["ALL"]}
+          , {"path": "/hbase_prod_master", "name": "HBase Prod Master", "type": "iframe", "url": "http://hadoop0.nessops.net:60010/", "methods": ["ALL"]}
+          , {"path": "/hbase_dev_master", "name": "HBase Dev Master", "type": "iframe", "url": "http://hadoop0.nessops.net:65010/", "methods": ["ALL"]}
+          , {"path": "/cloudera", "name": "Cloudera Manager", "type": "iframe", "url": "http://hadoop0.nessops.net:7180", "methods": ["ALL"]}
+          //, {"path": "/hue", "name": "Hue", "type": "iframe", "url": "http://prd-hadoop1.nessops.net:8088/", "methods": ["ALL"]}
+          //, {"path": "/oozie", "name": "Oozie", "type": "iframe", "url": "http://prd-hadoop1.nessops.net:11000/", "methods": ["ALL"]}
+        ]
+      },
+      {
+        "name": "Analytics",
+        "type": "menu",
+        "items": [
+            {"path": "/analytics", "name": "Analytics Charting", "type": "iframe", "url": "http://analytics1.nessops.net", "methods": ["ALL"]}
+        ]
+      },
+
+      {
+        "name": "Logging",
+        "type": "menu",
+        "items": [
+            {"path": "/log-stg-access", "name": "Staging Access Log", "type": "iframe", "url": "http://access.stg.nessops.net/", "methods": ["ALL"]}
+          , {"path": "/log-stg-launcher", "name": "Staging Launcher Log", "type": "iframe", "url": "http://launcher.stg.nessops.net/", "methods": ["ALL"]}
+          , {"path": "/log-stg-system", "name": "Staging System Log", "type": "iframe", "url": "http://system.stg.nessops.net/", "methods": ["ALL"]}
+          , {"path": "/log-prd-access", "name": "Production Access Log", "type": "iframe", "url": "http://access.prd.nessops.net/", "methods": ["ALL"]}
+          , {"path": "/log-prd-launcher", "name": "Production Launcher Log", "type": "iframe", "url": "http://launcher.prd.nessops.net/", "methods": ["ALL"]}
+          , {"path": "/log-prd-system", "name": "Production System Log", "type": "iframe", "url": "http://system.prd.nessops.net/", "methods": ["ALL"]}
+
         ]
       }
     ]
